swift/Sources/CEdgeVeda/include/edge_veda.h

/* ============================================================================
 * Error Codes
 * ========================================================================= */

typedef enum {
    EV_SUCCESS = 0,                    /**< Operation successful */
    EV_ERROR_INVALID_PARAM = -1,       /**< Invalid parameter provided */
    EV_ERROR_OUT_OF_MEMORY = -2,       /**< Out of memory */
    EV_ERROR_MODEL_LOAD_FAILED = -3,   /**< Failed to load model */
    EV_ERROR_BACKEND_INIT_FAILED = -4, /**< Failed to initialize backend */
    EV_ERROR_INFERENCE_FAILED = -5,    /**< Inference operation failed */
    EV_ERROR_CONTEXT_INVALID = -6,     /**< Invalid context */
    EV_ERROR_STREAM_ENDED = -7,        /**< Stream has ended */
    EV_ERROR_NOT_IMPLEMENTED = -8,     /**< Feature not implemented */
    EV_ERROR_MEMORY_LIMIT_EXCEEDED = -9, /**< Memory limit exceeded */
    EV_ERROR_UNSUPPORTED_BACKEND = -10, /**< Backend not supported on this platform */
    EV_ERROR_UNKNOWN = -999            /**< Unknown error */
} ev_error_t;
/* ============================================================================
 * Context Management
 * ========================================================================= */

/**
 * @brief Opaque context handle for Edge Veda inference engine
 */
typedef struct ev_context_impl* ev_context;
/* ============================================================================
 * Generation Parameters
 * ========================================================================= */

/**
 * @brief Parameters for text generation
 */
typedef struct {
    /** Maximum number of tokens to generate */
    int max_tokens;

    /** Temperature for sampling (0.0 = deterministic, higher = more random) */
    float temperature;

    /** Top-p (nucleus) sampling threshold */
    float top_p;

    /** Top-k sampling limit */
    int top_k;

    /** Repetition penalty (1.0 = no penalty) */
    float repeat_penalty;

    /** Frequency penalty */
    float frequency_penalty;

    /** Presence penalty */
    float presence_penalty;

    /** Stop sequences (NULL-terminated array of strings) */
    const char** stop_sequences;

    /** Number of stop sequences */
    int num_stop_sequences;

    /** Reserved for future use - must be NULL */
    void* reserved;
} ev_generation_params;
/* ============================================================================
 * Single-Shot Generation
 * ========================================================================= */

/**
 * @brief Generate a complete response for given prompt
 *
 * This is a blocking call that returns the complete generated text.
 * For streaming output, use ev_generate_stream() instead.
 *
 * @param ctx Context handle
 * @param prompt Input prompt text
 * @param params Generation parameters (NULL = use defaults)
 * @param output Pointer to receive generated text (caller must free with ev_free_string)
 * @return Error code (EV_SUCCESS on success)
 */
EV_API ev_error_t ev_generate(
    ev_context ctx,
    const char* prompt,
    const ev_generation_params* params,
    char** output
);
/**
 * @brief Free string allocated by Edge Veda
 * @param str String to free
 */
EV_API void ev_free_string(char* str);
/* ============================================================================
 * Streaming Generation
 * ========================================================================= */

/**
 * @brief Opaque stream handle for streaming generation
 */
typedef struct ev_stream_impl* ev_stream;
/**
 * @brief Start streaming generation for given prompt
 *
 * Returns a stream handle that can be used with ev_stream_next()
 * to retrieve tokens as they are generated.
 *
 * @param ctx Context handle
 * @param prompt Input prompt text
 * @param params Generation parameters (NULL = use defaults)
 * @param error Optional pointer to receive error code
 * @return Stream handle on success, NULL on failure
 */
EV_API ev_stream ev_generate_stream(
    ev_context ctx,
    const char* prompt,
    const ev_generation_params* params,
    ev_error_t* error
);
/**
 * @brief Get next token from streaming generation
 *
 * This is a blocking call that waits for the next token.
 * Returns NULL when generation is complete or on error.
 *
 * @param stream Stream handle
 * @param error Optional pointer to receive error code
 * @return Next token string (caller must free with ev_free_string), or NULL when done
 */
EV_API char* ev_stream_next(ev_stream stream, ev_error_t* error);
/**
 * @brief Check if stream has more tokens available
 * @param stream Stream handle
 * @return true if more tokens available, false if ended or error
 */
EV_API bool ev_stream_has_next(ev_stream stream);
/**
 * @brief Cancel ongoing streaming generation
 * @param stream Stream handle
 */
EV_API void ev_stream_cancel(ev_stream stream);
/**
 * @brief Free stream handle and release resources
 * @param stream Stream handle to free
 */
EV_API void ev_stream_free(ev_stream stream);
/* ============================================================================
 * Memory Management
 * ========================================================================= */

/**
 * @brief Memory usage statistics
 */
typedef struct {
    /** Current memory usage in bytes */
    size_t current_bytes;

    /** Peak memory usage in bytes */
    size_t peak_bytes;

    /** Memory limit in bytes (0 = no limit) */
    size_t limit_bytes;

    /** Memory used by model in bytes */
    size_t model_bytes;

    /** Memory used by context in bytes */
    size_t context_bytes;

    /** Reserved for future use */
    size_t reserved[8];
} ev_memory_stats;
/**
 * @brief Get current memory usage statistics
 * @param ctx Context handle
 * @param stats Pointer to stats structure to fill
 * @return Error code (EV_SUCCESS on success)
 */
EV_API ev_error_t ev_get_memory_usage(ev_context ctx, ev_memory_stats* stats);
/**
 * @brief Set memory limit for context
 *
 * If auto_unload is enabled in config, the context will automatically
 * unload resources when this limit is approached.
 *
 * @param ctx Context handle
 * @param limit_bytes Memory limit in bytes (0 = no limit)
 * @return Error code (EV_SUCCESS on success)
 */
EV_API ev_error_t ev_set_memory_limit(ev_context ctx, size_t limit_bytes);
/**
 * @brief Memory pressure callback function type
 *
 * @param user_data User-provided data pointer
 * @param current_bytes Current memory usage
 * @param limit_bytes Memory limit
 */
typedef void (*ev_memory_pressure_callback)(
    void* user_data,
    size_t current_bytes,
    size_t limit_bytes
);
/**
 * @brief Register callback for memory pressure events
 *
 * The callback will be invoked when memory usage approaches the limit.
 *
 * @param ctx Context handle
 * @param callback Callback function (NULL to unregister)
 * @param user_data User data to pass to callback
 * @return Error code (EV_SUCCESS on success)
 */
EV_API ev_error_t ev_set_memory_pressure_callback(
    ev_context ctx,
    ev_memory_pressure_callback callback,
    void* user_data
);
/**
 * @brief Manually trigger garbage collection and memory cleanup
 * @param ctx Context handle
 * @return Error code (EV_SUCCESS on success)
 */
EV_API ev_error_t ev_memory_cleanup(ev_context ctx);
/* ============================================================================
 * Utility Functions
 * ========================================================================= */

/**
 * @brief Enable or disable verbose logging
 * @param enable true to enable, false to disable
 */
EV_API void ev_set_verbose(bool enable);
/**
 * @brief Get last error message for context
 * @param ctx Context handle
 * @return Last error message string (valid until next API call)
 */
EV_API const char* ev_get_last_error(ev_context ctx);
/**
 * @brief Reset context state (clear conversation history)
 * @param ctx Context handle
 * @return Error code (EV_SUCCESS on success)
 */
EV_API ev_error_t ev_reset(ev_context ctx);
/* ============================================================================
 * Vision API (VLM - Vision Language Model)
 * ========================================================================= */

/**
 * @brief Opaque context handle for Edge Veda vision inference engine
 *
 * Vision context is SEPARATE from text context (ev_context).
 * Create with ev_vision_init(), free with ev_vision_free().
 */
typedef struct ev_vision_context_impl* ev_vision_context;
/**
 * @brief Configuration structure for initializing vision context
 */
typedef struct {
    /** Path to VLM GGUF model file */
    const char* model_path;

    /** Path to mmproj (multimodal projector) GGUF file */
    const char* mmproj_path;

    /** Number of CPU threads (0 = auto-detect) */
    int num_threads;

    /** Token context window size (0 = auto, based on model) */
    int context_size;

    /** Batch size for processing (0 = default 512) */
    int batch_size;

    /** Memory limit in bytes (0 = no limit) */
    size_t memory_limit_bytes;

    /** GPU layers to offload (-1 = all, 0 = none) */
    int gpu_layers;

    /** Use memory mapping for model file */
    bool use_mmap;

    /** Reserved for future use - must be NULL */
    void* reserved;
} ev_vision_config;
/**
 * @brief Get default vision configuration with recommended settings
 * @param config Pointer to config structure to fill
 */
EV_API void ev_vision_config_default(ev_vision_config* config);
/**
 * @brief Initialize vision context with VLM model and mmproj
 *
 * Loads the vision language model and multimodal projector.
 * The vision context is independent from any text context.
 *
 * @param config Vision configuration (model_path and mmproj_path required)
 * @param error Optional pointer to receive error code
 * @return Vision context handle on success, NULL on failure
 */
EV_API ev_vision_context ev_vision_init(
    const ev_vision_config* config,
    ev_error_t* error
);
/**
 * @brief Describe an image using the vision model
 *
 * Takes raw RGB888 image bytes and a text prompt, returns a text description.
 * This is a blocking call that returns the complete generated text.
 *
 * @param ctx Vision context handle
 * @param image_bytes Raw pixel data in RGB888 format (width * height * 3 bytes)
 * @param width Image width in pixels
 * @param height Image height in pixels
 * @param prompt User prompt (e.g., "Describe this image")
 * @param params Generation parameters (NULL = use defaults)
 * @param output Pointer to receive generated text (caller must free with ev_free_string)
 * @return Error code (EV_SUCCESS on success)
 */
EV_API ev_error_t ev_vision_describe(
    ev_vision_context ctx,
    const unsigned char* image_bytes,
    int width,
    int height,
    const char* prompt,
    const ev_generation_params* params,
    char** output
);
/**
 * @brief Free vision context and release all resources
 * @param ctx Vision context handle to free
 */
EV_API void ev_vision_free(ev_vision_context ctx);
/**
 * @brief Check if vision context is valid and ready for inference
 * @param ctx Vision context handle
 * @return true if valid and model is loaded, false otherwise
 */
EV_API bool ev_vision_is_valid(ev_vision_context ctx);