flutter/lib/src/ffi/bindings.dart


    // Single-shot generation
    evGenerate = _dylib.lookupFunction<EvGenerateNative, EvGenerateDart>(
      'ev_generate',
    );
    evFreeString = _dylib.lookupFunction<EvFreeStringNative, EvFreeStringDart>(
      'ev_free_string',
    );

    // Memory management
    evGetMemoryUsage = _dylib.lookupFunction<EvGetMemoryUsageNative, EvGetMemoryUsageDart>(
      'ev_get_memory_usage',
    );
    evSetMemoryLimit = _dylib.lookupFunction<EvSetMemoryLimitNative, EvSetMemoryLimitDart>(
      'ev_set_memory_limit',
    );
    evSetMemoryPressureCallback = _dylib.lookupFunction<
      EvSetMemoryPressureCallbackNative,
      EvSetMemoryPressureCallbackDart
    >('ev_set_memory_pressure_callback');
    evMemoryCleanup = _dylib.lookupFunction<EvMemoryCleanupNative, EvMemoryCleanupDart>(
      'ev_memory_cleanup',
    );

    // Utility functions
    evSetVerbose = _dylib.lookupFunction<EvSetVerboseNative, EvSetVerboseDart>(
      'ev_set_verbose',
    );
    evGetLastError = _dylib.lookupFunction<EvGetLastErrorNative, EvGetLastErrorDart>(
      'ev_get_last_error',
    );
    evReset = _dylib.lookupFunction<EvResetNative, EvResetDart>('ev_reset');

    // Streaming generation
    evGenerateStream = _dylib.lookupFunction<EvGenerateStreamNative, EvGenerateStreamDart>(
      'ev_generate_stream',
    );
    evStreamNext = _dylib.lookupFunction<EvStreamNextNative, EvStreamNextDart>(
      'ev_stream_next',
    );
    evStreamHasNext = _dylib.lookupFunction<EvStreamHasNextNative, EvStreamHasNextDart>(
      'ev_stream_has_next',
    );
    evStreamCancel = _dylib.lookupFunction<EvStreamCancelNative, EvStreamCancelDart>(
      'ev_stream_cancel',
    );
    evStreamFree = _dylib.lookupFunction<EvStreamFreeNative, EvStreamFreeDart>(
      'ev_stream_free',
    );

    // Vision functions
    evVisionConfigDefault = _dylib.lookupFunction<
      EvVisionConfigDefaultNative,
      EvVisionConfigDefaultDart
    >('ev_vision_config_default');
    evVisionInit = _dylib.lookupFunction<EvVisionInitNative, EvVisionInitDart>(
      'ev_vision_init',
    );
    evVisionDescribe = _dylib.lookupFunction<EvVisionDescribeNative, EvVisionDescribeDart>(
      'ev_vision_describe',
    );
    evVisionFree = _dylib.lookupFunction<EvVisionFreeNative, EvVisionFreeDart>(
      'ev_vision_free',
    );
    evVisionIsValid = _dylib.lookupFunction<EvVisionIsValidNative, EvVisionIsValidDart>(
      'ev_vision_is_valid',
    );
    // Note: evVisionGetLastTimings is resolved lazily (see getter above)
    // because it may not exist in older XCFramework builds.
  }
}
